Fixed card size on mobile

--- a/src/pages/baccarat.module.css
+++ b/src/pages/baccarat.module.css
@@ -13,6 +13,13 @@
   border: none;
 }
 
+@media (max-width: 640px) {
+  .card {
+    width: 45px;
+    height: 70px;
+  }
+}
+
 .card img {
   width: 100%;
   height: 100%;
